src/Components/Button/Button.scss
@import '../../Styles/foundation';

.btn {
  display: inline-block;
  margin: 0;
  padding: $spacing-2 $spacing-3;
  position: relative;
  background: $white;
  color: $neutral-600;
  line-height: $line-height-solid;
  white-space: nowrap;
  cursor: pointer;
  font-size: $font-size-5;
  border: 1px solid $neutral-400;
  border-radius: $border-radius-2;
  font-weight: 700;
  text-decoration: none;
  transition-duration: .1s;
  transition-timing-function: ease-in;
  transition-property: background, border, box-shadow;

  &:focus,
  &:hover,
  &:active {
    border-color: $neutral-500;
    color: $neutral-700;
  }

  &.disabled,
  &:disabled {
    transition: none;
    color: $neutral-400;
    cursor: not-allowed;
    border-color: $neutral-300;
    box-shadow: none;
  }
}

.btn-fullwidth {
  width: 100%;
}

.btn-lg {
  font-size: $font-size-4;
  padding: $spacing-3 $spacing-4;
}

.btn-sm {
  font-size: $font-size-7;
  padding: 0 $spacing-2;
  border-radius: $border-radius-2;
  height: 30px;
}

.btn-primary {
  background: $blue;
  color: $white;
  border-color: $blue;

  &:focus,
  &:hover,
  &:active {
    color: $white;
    background: $blue-dark;
    border-color: $blue-dark;
  }

  &.disabled,
  &:disabled {
    color: $white;
    border-color: $blue-light;
    background-color: $blue-light;


    &:hover {
      background-color: $blue-light;
      border-color: $blue-light;
    }
  }

  .btn-loading-spinner {
    color: $white;
  }
}

.btn-danger {
  color: $red;
  border-color: $red-light;

  &:focus,
  &:hover,
  &:active {
    color: $red-dark;
    border-color: $red;
  }

  &.disabled,
  &:disabled {
    border-color: $red-light;
    color: $red-light;
  }

  .btn-loading-spinner {
    color: $red-light;
  }
}

.btn-text {
  background: transparent;
  border: none;
  color: $blue;
  height: auto;
  padding: 0 !important;
  text-decoration: underline;

  &:focus,
  &:hover {
    background: transparent;
    color: $blue-dark;
    text-decoration: underline;
  }
}

.btn-text.btn-danger,
.btn-text.btn-danger.btn-primary {
  background: transparent;
  color: $red;

  &:hover,
  &:focus {
    background: transparent;
    color: $red-dark;
  }
}

.btn-primary.btn-danger {
  background: $red;
  color: $white;
  border-color: $red;

  &:focus,
  &:hover,
  &:active {
    color: $white;
    background: $red-dark;
    border-color: $red-dark;
  }

  &.disabled,
  &:disabled {
    color: $white;
    background-color: $red-light;
    border-color: $red-light;

    &:hover {
      background-color: $red-light;
      border-color: $red-light;
    }
  }

  .btn-loading-spinner {
    color: $white;
  }
}

.btn-content {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  min-width: 1px;
  min-height: 1px;
}

.btn-loading,
.btn-loading.btn-primary.btn-danger {
  cursor: wait !important;
  &,
  &:hover,
  &.disabled,
  &:disabled {
    color: transparent;
  }
}

.btn-loading-spinner {
  position: absolute;
  top: 50%;
  left: 50%;
  margin-top: -.5rem;
  margin-left: -.5rem;
  color: $neutral-500;
}

.btn-icon {
  margin-right: $spacing-2;
}

